wind direction section work

--- a/main.css
+++ b/main.css
@@ -109,6 +109,9 @@ a:hover {
   grid-column: 3/4;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: -webkit-min-content 1fr;
+  grid-template-rows: min-content 1fr;
+  align-self: start;
 }
 .wind .section-title,
 .wind .reading {
