--- a/main.css
+++ b/main.css
@@ -144,6 +144,50 @@ a:hover {
   grid-column: 1/3;
 }
 
-.unit-toggle {
+.unit {
   grid-column: 3/4;
+  place-self: end;
+  color: var(--clr-light);
+  display: flex;
+  gap: 0.5rem;
+  opacity: 0.7;
+  transition: opacity 275ms linear;
+}
+.unit:hover {
+  opacity: 1;
+}
+.unit label {
+  cursor: pointer;
+}
+.unit input {
+  clip: rect(0 0 0 0);
+  -webkit-clip-path: inset(50%);
+          clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
+.unit__toggle {
+  cursor: pointer;
+  width: 4em;
+  border: 2px solid var(--clr-light);
+  background: transparent;
+  padding: 0;
+  border-radius: 100vmax;
+  margin: 0 1em;
+}
+.unit__toggle::after {
+  content: "";
+  display: block;
+  background: var(--clr-light);
+  border-radius: 50%;
+  height: 1rem;
+  margin: 3px;
+  width: 1rem;
+  margin-left: auto;
+}
+.unit :checked ~ .unit__toggle::after {
+  margin-left: 3px;
 }/*# sourceMappingURL=main.css.map */
