--- a/main.scss
+++ b/main.scss
@@ -150,6 +150,56 @@ a {
     grid-column: 1 / 3;
 }
 
-.unit-toggle {
+.unit {
     grid-column: 3 / 4;
+    place-self: end;
+    color: var(--clr-light);
+    display: flex;
+    gap: 0.5rem;
+    opacity: .7;
+    transition: opacity 275ms linear;
+
+    &:hover {
+        opacity: 1;
+    }
+
+    label {
+        cursor: pointer;
+    }
+
+    input {
+        clip: rect(0 0 0 0);
+        clip-path: inset(50%);
+        height: 1px;
+        overflow: hidden;
+        position: absolute;
+        white-space: nowrap;
+        width: 1px;
+    }
+
+    &__toggle {
+        cursor: pointer;
+        width: 4em;
+        border: 2px solid var(--clr-light);
+        background: transparent;
+        padding: 0;
+        border-radius: 100vmax;
+        margin: 0 1em;
+
+        &::after {
+            content: '';
+            display: block;
+            background: var(--clr-light);
+            border-radius: 50%;
+            height: 1rem;
+            margin: 3px;
+            width: 1rem;
+            margin-left: auto;
+        }
+    }
+
+    :checked ~ .unit__toggle::after {
+        margin-left: 3px;
+    }
 }
+
