finalizing design of previous days section

--- a/main.css
+++ b/main.css
@@ -190,4 +190,139 @@ a:hover {
 }
 .unit :checked ~ .unit__toggle::after {
   margin-left: 3px;
+}
+
+.previous-weather {
+  background: var(--clr-light);
+  color: var(--clr-dark);
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  transform: translateY(60%);
+  transition: transform 350ms ease;
+  padding: 3em;
+}
+
+.show-previous-weather {
+  position: absolute;
+  background-color: var(--clr-light);
+  left: 50%;
+  width: 10rem;
+  transform: translate(-50%, calc(-100% - 3rem));
+  text-align: center;
+  font-size: var(--fs-h2);
+  line-height: 1;
+  -webkit-clip-path: polygon(50% 0, 0 100%, 100% 100%);
+          clip-path: polygon(50% 0, 0 100%, 100% 100%);
+  cursor: pointer;
+  color: var(--clr-gray);
+  border: 0;
+  font-family: inherit;
+}
+.show-previous-weather:hover, .show-previous-weather:focus {
+  color: var(--clr-dark);
+}
+.show-previous-weather span {
+  display: block;
+  transform: rotate(0);
+  transition: transform 300ms ease;
+}
+
+.previous-days {
+  display: flex;
+  justify-content: space-between;
+}
+
+.previous-weather__title {
+  text-align: center;
+}
+
+.previous-day {
+  opacity: 0;
+}
+.previous-day > * {
+  margin: 0;
+}
+.previous-day__date {
+  font-size: 0.9rem;
+  color: var(--clr-gray);
+}
+.previous-day__more-info {
+  border: 0;
+  border-radius: 100vmax;
+  background: var(--clr-dark);
+  color: var(--clr-light);
+  text-transform: uppercase;
+  padding: 0.3em 1em;
+  cursor: pointer;
+  margin-top: 1em;
+}
+.previous-day__more-info:hover {
+  background: var(--clr-gray);
+}
+
+.show-weather.previous-weather {
+  transform: translateY(0);
+}
+.show-weather.previous-weather .show-previous-weather span {
+  display: block;
+  transform: rotate(180deg) translateY(-6px);
+}
+.show-weather.previous-weather .previous-weather__title,
+.show-weather.previous-weather .previous-day {
+  -webkit-animation: slideUpIn 750ms forwards;
+          animation: slideUpIn 750ms forwards;
+}
+.show-weather.previous-weather .previous-weather__title {
+  text-align: left;
+}
+.show-weather.previous-weather .previous-day:nth-child(1) {
+  -webkit-animation-delay: 100ms;
+          animation-delay: 100ms;
+}
+.show-weather.previous-weather .previous-day:nth-child(2) {
+  -webkit-animation-delay: 125ms;
+          animation-delay: 125ms;
+}
+.show-weather.previous-weather .previous-day:nth-child(3) {
+  -webkit-animation-delay: 150ms;
+          animation-delay: 150ms;
+}
+.show-weather.previous-weather .previous-day:nth-child(4) {
+  -webkit-animation-delay: 175ms;
+          animation-delay: 175ms;
+}
+.show-weather.previous-weather .previous-day:nth-child(5) {
+  -webkit-animation-delay: 200ms;
+          animation-delay: 200ms;
+}
+.show-weather.previous-weather .previous-day:nth-child(6) {
+  -webkit-animation-delay: 225ms;
+          animation-delay: 225ms;
+}
+.show-weather.previous-weather .previous-day:nth-child(7) {
+  -webkit-animation-delay: 250ms;
+          animation-delay: 250ms;
+}
+
+@-webkit-keyframes slideUpIn {
+  0% {
+    opacity: 0;
+    transform: translateY(50%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes slideUpIn {
+  0% {
+    opacity: 0;
+    transform: translateY(50%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }/*# sourceMappingURL=main.css.map */
